objects/Customer_Insight_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Error_Message_From_Address__c</fullName>
        <description>Used to specify the email address (must be an org-wide email address) from which any error messages from the Divisional View are sent</description>
        <inlineHelpText>Must be an org-wide email address</inlineHelpText>
        <label>Error Message From Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Error_Message_To_Address__c</fullName>
        <description>Used to specify the email address (likely a distribution list) to which any error messages from the Divisional View are sent</description>
        <label>Error Message To Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Mapping_Key__c</fullName>
        <label>Mapping Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Customer Insight Settings</label>
</CustomObject>